Diversity of expressions cleaned up