@@ -6,17 +6,23 @@ import uml.structure.*;
 
 
 /**
+ * Structural description of a call; not executable.
+ * Prefer {@link run.pascal.MethodCallExpression} for evaluation.
  */
-public final class CallExpression extends Expression {
+public final class CallExpression implements Expression {
 
     public CallExpression(Operation operation) {
         this(operation, Collections.emptyMap());
     }
 
     public CallExpression(Operation operation, Map<Parameter, Expression> arguments) {
-        Collection<Parameter> missingParameters = operation.getParameters().stream().filter(parameter -> !arguments.containsKey(parameter)).collect(Collectors.toList());
+        Collection<Parameter> missingParameters = operation.getParameters().stream()
+            .filter(parameter -> !arguments.containsKey(parameter))
+            .toList();
         if (!missingParameters.isEmpty()) {
-            throw new IllegalArgumentException("Missing parameter(s): " + missingParameters.stream().map(parameter -> parameter.toString()).collect(Collectors.joining(", ")));
+            throw new IllegalArgumentException("Missing parameter(s): " + missingParameters.stream()
+                .map(Objects::toString)
+                .collect(Collectors.joining(", ")));
         }
         this.operation = Objects.requireNonNull(operation);
         this.arguments = Map.copyOf(arguments);
@@ -27,13 +33,17 @@ public final class CallExpression extends Expression {
     }
 
     public Map<Parameter, Expression> getArguments() {
-    return arguments;
-}
-
+        return arguments;
+    }
 
     @Override
     public Optional<Type> getType() {
         return operation.getType();
+    }
+
+    @Override
+    public java.lang.Object evaluate(Engine engine) {
+        throw new UnsupportedOperationException("CallExpression is not executable; use MethodCallExpression");
     }
 
     @Override
@@ -45,7 +55,7 @@ public final class CallExpression extends Expression {
             .collect(Collectors.joining(", ", "(", ")")));
         return string.toString();
     }
-    
+
     private final Operation operation;
     private final Map<Parameter, Expression> arguments;
 
